<resources>
    <string name="app_name">Qualityum App</string>
    <string name="title_home">Home</string>
    <string name="label_home">Qualityum App</string>
    <string name="title_stock">Stock</string>
    <string name="label_stock">Raw Material Stock</string>
    <string name="title_camera">Camera</string>
    <string name="title_favorite">Favorite</string>
    <string name="label_favorite">Favorite Stock</string>
    <string name="title_profile">Profile</string>
    <string name="fruits">Fruits</string>
    <string name="vegetables">Vegetables</string>
    <string name="others">Others</string>
    <string name="total_text">Total Raw Material Stocks</string>
    <string name="category">Category</string>
    <string name="about_ikm">About IKM</string>
    <string name="txt_empty">Oops! There’s no stock</string>
    <string name="electra_team">Electra Team</string>
    <string name="electra_email">electra.team@bangkit.com</string>
    <string name="electra_phone">+62 812 5678 2345</string>
    <string name="settings">SETTINGS</string>
    <string name="personal_information">Personal Information</string>
    <string name="language">Language</string>
    <string name="about">ABOUT</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="best_before">Best Before</string>
    <string name="date_example">07 June, 2021</string>
    <string name="fruit_example">Fuji Apple</string>
    <string name="quality">Quality</string>
    <string name="quality_example">Apple Good</string>
    <string name="quantity">Quantity</string>
    <string name="quantity_example">25 Fruits</string>
    <string name="description">Description</string>
    <string name="txt_description_example">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="detail_stock">Detail Stock</string>
    <string name="fab_for_add_stock">FAB for add stock</string>
    <string name="save">SAVE</string>
    <string name="expired_date">Expired Date</string>
    <string name="name">Name</string>
    <string name="add_raw_material">Add Raw Material</string>
    <string name="add_success">Item Added Successfully</string>
    <string name="add_failed">Failed to Add Item</string>
    <string name="no_favorites_yet">No Favorites yet</string>
    <string name="choose_image">Choose Image</string>
    <string name="txt_data_not_correct">Please Enter Data Correctly!</string>
    <string name="prediction_results">Prediction Results</string>
    <string name="prediction">Prediction</string>
    <string name="type">Type</string>
    <string name="orange_type">Orange</string>
    <string name="banana_type">Banana</string>
    <string name="upload_success">Upload successful</string>
    <string name="upload_fail">Failed to upload</string>
    <string name="warning_type_choose">Please choose type first!</string>
    <string name="something_error">There\'s is something error</string>
    <string name="email">Email</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="password">Password</string>
    <string name="sign_in_button">Sign In</string>
    <string name="sign_up_shortcut">Don\'t have an account ? Sign Up</string>
    <string name="register_home">Create Your Account</string>
    <string name="fullname">Full Name</string>
    <string name="sign_in_shortcut">Have an account? Sign In</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="errorfullname">Please input your Full Name</string>
    <string name="erroremail">Please input your Email</string>
    <string name="errorpassword">Please input your Password</string>
    <string name="failedregister">Registration Failed, Please Try Again!</string>
    <string name="successregister">Registrasion Success</string>
    <string name="failedlogin">Login Failed, Please Try Again!</string>
    <string name="find_your_raw_material_stock">Find your raw material stock</string>
    <string name="image_preview">Image Preview</string>
    <string name="hi">Hi</string>
    <string name="reminder_prediction_text">Please, check and choose if you want to get fruits prediction too</string>
    <string name="get_prediction">Get Prediction</string>
    <string name="next">Next</string>
    <string name="full_name">Full Name</string>
    <string name="phone">Phone</string>
    <string name="detail_profile">Detail Profile</string>
    <string name="remider_bad_fruit_text">You have bad fruit that can\'t be predicted anymore!</string>
    <string name="cancel_reminder">Reminder has been disabled</string>
    <string name="setup_reminder">Reminder has been activated</string>
    <string name="notify_expired_time">Notify me one day before expired</string>
</resources>