<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_icon"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_stock"
        android:icon="@drawable/ic_stock_icon"
        android:title="@string/title_stock" />

    <item
        android:id="@+id/navigation_camera"
        android:icon="@drawable/ic_photo_camera_white_24dp"
        android:title="@string/title_camera" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_baseline_favorite_border_24"
        android:title="@string/title_favorite" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile" />

</menu>