<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.detail.DetailFragment">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/img_detail_stock"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/fuji_apple"
                tools:ignore="ContentDescription" />
        </com.google.android.material.card.MaterialCardView>

        <View
            android:id="@+id/divider_image"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            android:background="@color/divider_color"
            android:elevation="2dp"
            app:layout_constraintTop_toBottomOf="@id/cv_detail" />

        <TextView
            android:id="@+id/tv_detail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/fruit_example"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider_image" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_fav_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="12dp"
            app:cardElevation="8dp"
            app:layout_constraintBottom_toBottomOf="@id/tv_detail_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_detail_name">

            <Button
                android:id="@+id/btn_fav_stock"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="4dp"
                android:background="@drawable/ic_baseline_favorite_border_24"
                android:backgroundTint="@color/red_ikm"
                android:clickable="true"
                android:focusable="true" />
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/tv_detail_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/category"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/tv_detail_name"
            app:layout_constraintTop_toBottomOf="@id/cv_fav_detail" />

        <TextView
            android:id="@+id/tv_category_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_detail_category"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_detail_category"
            tools:text="@string/fruits" />

        <TextView
            android:id="@+id/tv_detail_quality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/quality"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/tv_detail_name"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_category" />

        <TextView
            android:id="@+id/tv_quality_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_detail_quality"
            app:layout_constraintEnd_toEndOf="@id/tv_category_value"
            app:layout_constraintTop_toTopOf="@id/tv_detail_quality"
            tools:text="@string/quality_example" />

        <TextView
            android:id="@+id/tv_detail_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/quantity"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/tv_detail_name"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_quality" />

        <TextView
            android:id="@+id/tv_quantity_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_detail_quantity"
            app:layout_constraintEnd_toEndOf="@id/tv_category_value"
            app:layout_constraintTop_toTopOf="@id/tv_detail_quantity"
            tools:text="@string/quantity_example" />

        <TextView
            android:id="@+id/tv_detail_exp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/best_before"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/tv_detail_name"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_quantity" />

        <TextView
            android:id="@+id/tv_exp_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red_ikm"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_detail_exp"
            app:layout_constraintEnd_toEndOf="@id/tv_category_value"
            app:layout_constraintTop_toTopOf="@id/tv_detail_exp"
            tools:text="@string/date_example" />

        <View
            android:id="@+id/divider_description"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/divider_color"
            android:elevation="4dp"
            app:layout_constraintEnd_toEndOf="@id/tv_exp_value"
            app:layout_constraintStart_toStartOf="@id/tv_detail_exp"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_exp" />

        <TextView
            android:id="@+id/tv_detail_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/description"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/tv_detail_name"
            app:layout_constraintTop_toBottomOf="@id/divider_description" />

        <TextView
            android:id="@+id/tv_description_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:gravity="start"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@id/divider_description"
            app:layout_constraintStart_toStartOf="@id/tv_detail_description"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_description"
            tools:text="@string/txt_description_example" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
